<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    android:padding="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_device_token"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owner_name"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textColor="#000000"
        />
    <EditText
        android:id="@+id/owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locker_number"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textColor="#000000"
        />
    <EditText
        android:id="@+id/lockerNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="number"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/token"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/tokenEntered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/enter_new_device_token"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/tokenReEntered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/re_enter_device_token"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:singleLine="true"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Token"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:onClick="submission"
        android:backgroundTint="@color/purple_500"
        />

</LinearLayout>