<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    >


    <LinearLayout
        android:id="@+id/connected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/onControl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:onClick="requestOTP"
            android:padding="5dp"
            android:text="@string/request_otp"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/recData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/OtpTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#EAEEC0"
            android:gravity="center_horizontal"
            android:text="@string/OtpTime"
            android:textAlignment="center"
            android:textColor="#ED3E3E"
            android:textSize="19sp"
            android:textStyle="bold" />


    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/failed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/failure_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/connection_problem"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/failure_icon"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingVertical="10dp"
            android:src="@drawable/failure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/failure_txt" />

        <Button
            android:id="@+id/retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:onClick="retryFn"
            android:text="@string/retry"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/failure_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>